# neutron-sdk-bad-ibc

./: .gitignore  build_release.sh
artifacts/: checksums.txt  neutron_interchain_queries.wasm
contracts/neutron_interchain_queries/: Cargo.toml  README.md
contracts/neutron_interchain_queries/examples/: config.rs  deploy.rs  migrate.rs  mint_nft.rs  query-trigger.rs  query.rs  remove_query.rs  return_nft.rs  update_config.rs
contracts/neutron_interchain_queries/src/: contract.rs  error.rs  ibc.rs  lib.rs  mint.rs  msg.rs  neutron_sdk.rs  query_helpers.rs  state.rs  sudo.rs
contracts/neutron_interchain_queries/src/testing/: tests.rs
