[package]
name = "neutron_interchain_queries"
version = "0.1.0"
authors = ["pr0n00gler <misha.m@p2p.org>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
schemars = "0.8.10"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
base64 = "0.13.0"

cosmos-sdk-proto = { version = "0.21.1", default-features = false, features = [
  "cosmwasm",
] }
prost = "0.12.3"
prost-types = "0.12.3"

cosmwasm-std = { version = "1.2.0", features = ["staking"] }
cw-storage-plus = { version = "0.14.0", features = ["iterator"] }
cosmwasm-schema = { version = "1.2.0", default-features = false }
cw0 = "0.10.3"
cw721 = "0.18.0"
cw2 = "0.15.1"
cw721-base = "0.18.0"

serde-json-wasm = "0.4.1"
bech32 = "0.9.1"
cw-orch = { version = "0.21.2" }
hex = "0.4.3"
snailquote = "0.3.1"
cosmos-anybuf = { git = "https://github.com/AbstractSDK/cosmos-anybuf" }
thiserror = "1.0.58"

[dev-dependencies]
neutron-sdk = { version = "0.9.0" }
cw-orch = { version = "0.21.2", features = ["daemon"] }
env_logger = "0.10.0"
dotenv = "0.15.0"
